blogger gold fixes + tooltips bug fixes  + removed appsettings

--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -50,7 +50,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      android:paddingLeft="@dimen/space_16">
+      android:paddingStart="@dimen/space_16">
 
       <com.mycity4kids.widget.CustomFontTextView
         android:layout_width="wrap_content"
@@ -67,9 +67,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_profile"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_profile"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:text="@string/personal_info"
         android:textColor="@color/campaign_4A4A4A"
@@ -81,9 +81,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_profile"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_profile"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:text="Edit profile"
         android:textColor="@color/campaign_4A4A4A"
@@ -108,9 +108,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_payment_methods"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_payment_methods"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:text="@string/payment_details"
         android:textColor="@color/campaign_4A4A4A"
@@ -121,9 +121,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_social"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_social"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:text="@string/social_accounts"
         android:textColor="@color/campaign_4A4A4A"
@@ -134,8 +134,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_read_articles"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_read_articles"
         android:drawablePadding="@dimen/space_20"
         android:inputType="textCapSentences"
         android:textColor="@color/campaign_4A4A4A"
@@ -146,9 +146,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_activity"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_activity"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:inputType="textCapSentences"
         android:textColor="@color/campaign_4A4A4A"
@@ -159,9 +159,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_activity"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_activity"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:inputType="textCapSentences"
         android:text="Invite Contacts"
@@ -174,9 +174,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_security_setting"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_security_setting"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:inputType="textCapSentences"
         android:text="Security Settings"
@@ -187,9 +187,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/space_25"
-        android:layout_marginRight="@dimen/space_15"
+        android:layout_marginEnd="@dimen/space_15"
         android:background="@color/color_DADADA" />
-
 
       <com.mycity4kids.widget.CustomFontTextView
         android:layout_width="wrap_content"
@@ -202,15 +201,28 @@
         android:textStyle="bold" />
 
       <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/appSettingsTextView"
+        android:id="@+id/vlogsLanguageSettingTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_settings"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_languages"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
-        android:text="@string/app_settings"
+        android:text="Video Language Settings"
+        android:textColor="@color/campaign_4A4A4A"
+        android:textSize="16sp" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/chooseTopicsTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_20"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_settings"
+        android:drawableEnd="@drawable/arrow_right"
+        android:drawablePadding="@dimen/space_20"
+        android:text="@string/topic_of_interest"
         android:textColor="@color/campaign_4A4A4A"
         android:textSize="16sp" />
 
@@ -219,9 +231,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_help"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_help"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:text="@string/help"
         android:textColor="@color/campaign_4A4A4A"
@@ -233,9 +245,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_reprt_spam"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_reprt_spam"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:text="@string/report_spams"
         android:textColor="@color/campaign_4A4A4A"
@@ -247,9 +259,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
-        android:drawableLeft="@drawable/ic_about"
-        android:drawableRight="@drawable/arrow_right"
+        android:layout_marginEnd="@dimen/space_8"
+        android:drawableStart="@drawable/ic_about"
+        android:drawableEnd="@drawable/arrow_right"
         android:drawablePadding="@dimen/space_20"
         android:text="@string/about_txt"
         android:textColor="@color/campaign_4A4A4A"
@@ -261,7 +273,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_8"
+        android:layout_marginEnd="@dimen/space_8"
         android:drawablePadding="@dimen/space_20"
         android:gravity="center"
         android:text="@string/app_version"
@@ -272,7 +284,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/space_25"
-        android:layout_marginRight="@dimen/space_15"
+        android:layout_marginEnd="@dimen/space_15"
         android:background="@color/color_DADADA" />
 
       <LinearLayout
@@ -288,7 +300,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
-          android:layout_marginRight="@dimen/space_10"
+          android:layout_marginEnd="@dimen/space_10"
           android:background="@drawable/ic_logout"
           android:backgroundTint="@color/color_B4536A" />
 
