--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -244,7 +244,6 @@
 
   </RelativeLayout>
 
-
   <RelativeLayout
     android:id="@+id/dashBoardContentFilterCoachMark"
     android:layout_width="match_parent"
@@ -363,7 +362,6 @@
       android:layout_height="match_parent"
       android:layout_below="@+id/tab_layout">
 
-
       <LinearLayout
         android:id="@+id/filterContentContainerCoachMark"
         android:layout_width="match_parent"
@@ -383,7 +381,7 @@
           android:paddingTop="8dp"
           android:paddingEnd="12dp"
           android:paddingBottom="8dp"
-          android:text="Blogs"
+          android:text="@string/groups.sections.blogs"
           app:fb_borderColor="@color/app_red"
           app:fb_borderWidth="1dp"
           app:fb_defaultColor="@color/white_color"
@@ -405,7 +403,7 @@
           android:paddingTop="8dp"
           android:paddingEnd="12dp"
           android:paddingBottom="8dp"
-          android:text="Mom Vlogs"
+          android:text="@string/myprofile.section.videos_label"
           app:fb_borderColor="@color/app_red"
           app:fb_borderWidth="1dp"
           app:fb_defaultColor="@color/white_color"
@@ -427,7 +425,7 @@
           android:paddingTop="8dp"
           android:paddingEnd="12dp"
           android:paddingBottom="8dp"
-          android:text="100 Word Story"
+          android:text="@string/myprofile.section.short_story_label"
           app:fb_borderColor="@color/app_red"
           app:fb_borderWidth="1dp"
           app:fb_defaultColor="@color/white_color"
@@ -441,14 +439,14 @@
       <com.mycity4kids.widget.CustomFontTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="@dimen/space_16"
         android:layout_marginEnd="@dimen/space_16"
+        android:layout_marginBottom="@dimen/space_50"
         android:background="@drawable/tooltip_shape_layout"
         android:padding="@dimen/space_18"
         android:text="@string/coachmark_read"
-        android:textColor="@color/campaign_515151"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/space_50"/>
+        android:textColor="@color/campaign_515151" />
 
     </RelativeLayout>
   </RelativeLayout>
@@ -461,213 +459,37 @@
     android:background="@color/transparent_black_90"
     android:visibility="gone">
 
-    <androidx.appcompat.widget.Toolbar
-      android:id="@+id/toolbarGroupCoachmark"
+    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:minHeight="?attr/actionBarSize"
-      app:theme="@style/ToolbarTheme"
-      app:titleTextAppearance="@style/ToolbarTheme.Title">
-
-      <RelativeLayout
-        android:id="@+id/toolbarRelativeLayoutGroupCoachmark"
+      android:layout_alignParentBottom="true"
+      android:layout_marginStart="@dimen/space_16"
+      android:layout_marginEnd="@dimen/space_16"
+      android:layout_marginBottom="80dp"
+      android:background="@drawable/tooltip_shape_layout"
+      android:orientation="vertical">
+      <com.mycity4kids.widget.CustomFontTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible">
-
-        <com.mycity4kids.widget.CustomFontTextView
-          android:id="@+id/toolbarTitleGroupCoachmark"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentStart="true"
-          android:layout_centerVertical="true"
-          android:paddingTop="10dp"
-          android:paddingBottom="10dp"
-          android:text="@string/navigation_bar.home"
-          android:textAllCaps="true"
-          android:textColor="@color/home.toolbar.titlecolor"
-          android:textSize="20sp"
-          app:fontName="oswald_regular.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-          android:id="@+id/selectOptToolbarTitleGroupCoachmark"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentStart="true"
-          android:layout_centerVertical="true"
-          android:layout_marginEnd="15dp"
-          android:layout_toStartOf="@+id/rightContainerLLGroupCoachmark"
-          android:gravity="center"
-          android:paddingTop="10dp"
-          android:paddingBottom="10dp"
-          android:text="@string/home_screen.select_an_option.title"
-          android:textColor="@color/select_option.toolbar.titlecolor"
-          android:textSize="20sp"
-          android:visibility="gone"
-          app:fontName="oswald_regular.ttf" />
-
-        <ImageView
-          android:id="@+id/downArrowImageViewGroupCoachmark"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_centerVertical="true"
-          android:layout_toEndOf="@+id/toolbarTitleGroupCoachmark"
-          android:paddingLeft="10dp"
-          android:paddingTop="15dp"
-          android:paddingRight="10dp"
-          android:paddingBottom="15dp"
-          android:src="@drawable/arrow_bluexxhdpidown"
-          android:tint="#507cbe"
-          android:visibility="gone" />
-
-        <LinearLayout
-          android:id="@+id/rightContainerLLGroupCoachmark"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentEnd="true"
-          android:layout_centerVertical="true"
-          android:orientation="horizontal">
-
-          <ImageView
-            android:id="@+id/searchAllImageViewGroupCoachmark"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            android:src="@drawable/ic_search"
-            android:visibility="visible" />
-
-          <ImageView
-            android:id="@+id/notificationGroupCoachmark"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            android:src="@drawable/selector_notification_tab" />
-
-        </LinearLayout>
-      </RelativeLayout>
-    </androidx.appcompat.widget.Toolbar>
-
-    <com.google.android.material.tabs.TabLayout
-      android:id="@+id/tablayout"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_below="@id/toolbarGroupCoachmark"
-      android:background="@color/transparent"
-      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-      app:tabIndicatorColor="@color/campaign_list_buttons"
-      app:tabIndicatorHeight="3dp"
-      app:tabSelectedTextColor="@color/color_979797"
-      app:tabTextAppearance="@style/CustomGroupTabText"
-      app:tabTextColor="@color/color_979797" />
-    <androidx.constraintlayout.widget.ConstraintLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_below="@id/tablayout">
-
+        android:paddingStart="18dp"
+        android:paddingTop="18dp"
+        android:paddingEnd="18dp"
+        android:text="@string/tooltip_groups"
+        android:textColor="@color/campaign_515151" />
 
       <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/joinGpLabelCoachmark"
+        android:id="@+id/okgotit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:padding="10dp"
-        android:text="@string/groups.join_label"
-        android:textColor="@color/groups.light_black_color"
-        android:textSize="16sp"
-        app:fontName="oswald_regular.ttf"
-        app:layout_constraintTop_toTopOf="parent" />
-
-      <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
-
-      <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/space_10"
-        app:cardCornerRadius="3dp"
-        app:layout_constraintEnd_toStartOf="@id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/joinGpLabelCoachmark">
-
-        <RelativeLayout
-          android:id="@+id/groupsGridItemView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content">
-          <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/groupImageView"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/default_article" />
-          <com.lid.lib.LabelImageView
-            android:id="@+id/groupNewLabelImageView"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="@color/explore_listing.topics.layer"
-            android:scaleType="fitXY"
-            app:label_backgroundColor="@color/app_red"
-            app:label_distance="20dp"
-            app:label_orientation="LEFT_TOP"
-            app:label_strokeColor="@color/app_red"
-            app:label_text="@string/new_label"
-            app:label_textSize="12sp" />
-          <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/groupNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:shadowColor="#48000000"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="6"
-            android:text="TOPICS"
-            android:textColor="@color/explore_listing.explore_categories.category_name"
-            android:textSize="18sp"
-            app:fontName="oswald_regular.ttf" />
-          <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignRight="@id/groupImageView">
-
-            <com.mycity4kids.widget.CustomFontTextView
-              android:id="@+id/badge"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_margin="7dp"
-              android:background="@drawable/group_badge_round"
-              android:elevation="15dp"
-              android:paddingLeft="10dp"
-              android:paddingRight="10dp"
-              android:shadowColor="#48000000"
-              android:shadowDx="-2"
-              android:shadowDy="-2"
-              android:shadowRadius="4"
-              android:text="10"
-              android:textColor="@color/white_color"
-              android:textSize="13sp"
-              android:visibility="visible"
-              app:fontName="oswald_regular.ttf" />
-          </LinearLayout>
-        </RelativeLayout>
-      </androidx.cardview.widget.CardView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+        android:layout_gravity="end"
+        android:gravity="end"
+        android:paddingStart="18dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="18dp"
+        android:paddingBottom="18dp"
+        android:text="@string/ok_got_it"
+        android:textColor="@color/app_red" />
+    </LinearLayout>
   </RelativeLayout>
 
 </FrameLayout>
