--- a/app/src/main/res/layout/article_details_container.xml
+++ b/app/src/main/res/layout/article_details_container.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/content_frame"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
@@ -110,14 +111,34 @@
           android:id="@+id/guidePlayTtsTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_alignParentEnd="true"
-          android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
-          android:layout_marginRight="5dp"
+          android:layout_marginEnd="5dp"
+          android:layout_toStartOf="@+id/bloggerGoldGuideCardView"
           android:padding="12dp"
           android:src="@drawable/ic_play_tts"
           android:tint="@color/white_color"
           android:visibility="visible" />
+
+        <androidx.cardview.widget.CardView
+          android:id="@+id/bloggerGoldGuideCardView"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentEnd="true"
+          android:layout_centerVertical="true"
+          android:layout_margin="10dp"
+          android:visibility="invisible"
+          app:cardCornerRadius="4dp"
+          app:cardElevation="0dp"
+          app:cardPreventCornerOverlap="false">
+          <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rectangle_gradient_bg"
+            android:padding="4dp"
+            android:src="@drawable/ic_gift"
+            android:tint="@color/white_color"
+            android:visibility="visible" />
+        </androidx.cardview.widget.CardView>
 
       </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -126,8 +147,8 @@
       android:layout_width="40dp"
       android:layout_height="2dp"
       android:layout_below="@+id/guidetoolbar"
-      android:layout_alignParentRight="true"
-      android:layout_marginRight="10dp"
+      android:layout_alignParentEnd="true"
+      android:layout_marginEnd="60dp"
       android:background="@color/white_color" />
 
     <View
@@ -135,8 +156,8 @@
       android:layout_width="2dp"
       android:layout_height="30dp"
       android:layout_below="@+id/guidetoolbar"
-      android:layout_alignParentRight="true"
-      android:layout_marginRight="28dp"
+      android:layout_alignParentEnd="true"
+      android:layout_marginEnd="78dp"
       android:background="@color/white_color" />
 
     <com.mycity4kids.widget.CustomFontTextView
@@ -144,8 +165,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/verticalLine1"
-      android:layout_alignParentRight="true"
-      android:layout_marginRight="10dp"
+      android:layout_alignParentEnd="true"
+      android:layout_marginEnd="10dp"
       android:background="@color/white_color"
       android:paddingLeft="9dp"
       android:paddingTop="7dp"
