--- a/app/src/main/res/layout/blog_vlog_leaderboard_fragment.xml
+++ b/app/src/main/res/layout/blog_vlog_leaderboard_fragment.xml
@@ -14,7 +14,7 @@
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/white_color"
+      android:background="#F2F2F2"
       android:clipToPadding="false"
       android:nestedScrollingEnabled="false" />
 
