--- a/app/src/main/res/layout/email_login_fragment.xml
+++ b/app/src/main/res/layout/email_login_fragment.xml
@@ -3,7 +3,10 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/rootLayout"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="match_parent"
+  android:background="@color/white_color"
+  android:clickable="true"
+  android:focusable="true">
 
   <View
     android:layout_width="match_parent"
