--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -321,50 +321,66 @@
                   android:textSize="12sp" />
               </LinearLayout>
 
-              <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/inviteTextView"
+              <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/privateProfileOptions"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/update_profile_bg"
-                android:elevation="6dp"
-                android:gravity="center"
-                android:minWidth="110dp"
-                android:paddingStart="30dp"
-                android:paddingTop="14dp"
-                android:paddingEnd="30dp"
-                android:paddingBottom="14dp"
-                android:text="@string/all_invite"
-                android:textAllCaps="true"
-                android:textColor="@color/white_color"
-                app:fontName="Roboto-Medium.ttf"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
-
-              <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/analyticsTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/profile_analytics_btn_bg"
-                android:drawableStart="@drawable/ic_analytics"
-                android:elevation="6dp"
-                android:gravity="center"
-                android:minWidth="110dp"
-                android:paddingStart="10dp"
-                android:paddingTop="12dp"
-                android:paddingEnd="10dp"
-                android:paddingBottom="12dp"
-                android:text="@string/all_analytics"
-                android:textAllCaps="true"
-                android:textColor="@color/app_red"
-                app:fontName="Roboto-Medium.ttf"
+                android:clipToPadding="false"
+                android:paddingBottom="4dp"
                 app:layout_constraintEnd_toStartOf="@+id/bloggerGoldTextView"
-                app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rankContainer">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                  android:id="@+id/inviteTextView"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_marginStart="20dp"
+                  android:layout_marginTop="4dp"
+                  android:layout_marginEnd="10dp"
+                  android:layout_marginBottom="4dp"
+                  android:background="@drawable/update_profile_bg"
+                  android:elevation="6dp"
+                  android:gravity="center"
+                  android:paddingStart="30dp"
+                  android:paddingTop="14dp"
+                  android:paddingEnd="30dp"
+                  android:paddingBottom="14dp"
+                  android:text="@string/all_invite"
+                  android:textAllCaps="true"
+                  android:textColor="@color/white_color"
+                  app:fontName="Roboto-Medium.ttf"
+                  app:layout_constraintEnd_toStartOf="@+id/analyticsTextView"
+                  app:layout_constraintHorizontal_bias="0.5"
+                  app:layout_constraintStart_toStartOf="parent"
+                  app:layout_constraintTop_toTopOf="parent" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                  android:id="@+id/analyticsTextView"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_marginStart="10dp"
+                  android:layout_marginTop="4dp"
+                  android:layout_marginEnd="20dp"
+                  android:layout_marginBottom="4dp"
+                  android:background="@drawable/profile_analytics_btn_bg"
+                  android:drawableStart="@drawable/ic_analytics"
+                  android:elevation="6dp"
+                  android:gravity="center"
+                  android:paddingStart="10dp"
+                  android:paddingTop="12dp"
+                  android:paddingEnd="10dp"
+                  android:paddingBottom="12dp"
+                  android:text="@string/all_analytics"
+                  android:textAllCaps="true"
+                  android:textColor="@color/app_red"
+                  app:fontName="Roboto-Medium.ttf"
+                  app:layout_constraintEnd_toEndOf="parent"
+                  app:layout_constraintHorizontal_bias="0.5"
+                  app:layout_constraintStart_toEndOf="@+id/inviteTextView"
+                  app:layout_constraintTop_toTopOf="parent" />
+
+              </androidx.constraintlayout.widget.ConstraintLayout>
 
               <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/followAuthorTextView"
@@ -383,6 +399,7 @@
                 android:text="@string/ad.follow_author"
                 android:textColor="@color/white_color"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@+id/followerContainer"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
@@ -403,6 +420,7 @@
                 android:paddingBottom="14dp"
                 android:text="@string/ad.bottom_bar.generic_share"
                 android:textColor="@color/app_red"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/followerContainer"
                 app:layout_constraintTop_toBottomOf="@+id/rankContainer" />
