--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -593,4 +593,5 @@
 
   <color name="color_9D9D9D">#9D9D9D</color>
   <color name="color_FFF7F8">#FFF7F8</color>
+  <color name="color_FA6371">#FA6371</color>
 </resources>
