--- a/app/src/main/res/layout/add_collection_activity.xml
+++ b/app/src/main/res/layout/add_collection_activity.xml
@@ -77,7 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white_color"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <LinearLayout
             android:layout_width="match_parent"
