--- a/app/src/main/res/layout/fb_friend_item.xml
+++ b/app/src/main/res/layout/fb_friend_item.xml
@@ -1,90 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="80dp"
+  android:background="@color/white_color"
+  android:orientation="vertical">
+
+  <com.mikhaellopez.circularimageview.CircularImageView
+    android:id="@+id/authorImageView"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:layout_centerVertical="true"
+    android:layout_marginStart="@dimen/space_10"
+    android:layout_marginEnd="@dimen/space_10"
+    android:src="@drawable/default_commentor_img"
+    app:civ_border="true"
+    app:civ_border_color="@color/line_separator_color"
+    app:civ_border_width="1px"
+    app:civ_shadow="false" />
+
+  <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="@color/white_color"
-    android:orientation="vertical">
-
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/authorImageView"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:layout_centerVertical="true"
-        android:layout_margin="10dp"
-        android:src="@drawable/default_commentor_img"
-        app:civ_border="true"
-        app:civ_border_color="@color/line_separator_color"
-        app:civ_border_width="1px"
-        app:civ_shadow="false" />
-
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_toStartOf="@+id/followingTextView"
+    android:layout_toEndOf="@+id/authorImageView">
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/authorNameTextView"
+      android:id="@+id/authorNameTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="5dp"
+      android:background="@color/white_color"
+      android:text=""
+      android:textColor="@color/campaign_515151"
+      android:textSize="16sp"
+      app:fontName="Roboto-Medium.ttf" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/mutualFriendsContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/authorNameTextView"
+      android:visibility="gone">
+      <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/user1"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/default_blogger_profile_img" />
+
+      <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="5dp"
-        android:layout_toStartOf="@+id/followingTextView"
-        android:layout_toEndOf="@+id/authorImageView"
-        android:background="@color/white_color"
-        android:gravity="center_vertical"
-        android:text=""
-        android:textColor="@color/follower_following_list.author_name"
-        android:textSize="14sp"
-        app:fontName="oswald_regular.ttf" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/space_20" />
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/followTextView"
-        android:layout_width="100dp"
+      <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/user2"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@id/guideline1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/default_blogger_profile_img" />
+      <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/follow_topic_author_bg"
-        android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:text="@string/blogger_profile.follow_button"
-        android:textColor="@color/app_red"
-        android:textSize="14sp"
-        app:fontName="oswald.ttf" />
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/space_40" />
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/followingTextView"
-        android:layout_width="100dp"
+      <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/user3"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toEndOf="@id/guideline2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/default_blogger_profile_img" />
+
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/remainingCountTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/follow_topic_author_bg"
-        android:foregroundGravity="center"
-        android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:text="@string/blogger_profile.unfollow_button"
-        android:textColor="@color/app_red"
-        android:textSize="14sp"
-        app:fontName="oswald.ttf" />
+        android:layout_marginStart="@dimen/space_5"
+        android:text="+ 6"
+        android:textColor="#9B9B9B"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/user3"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLoadingView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/followTextView"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/authorNameTextView"
-        android:visibility="gone">
 
-        <ImageView
-            android:id="@+id/imgLoader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/progress_spinner" />
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+  </RelativeLayout>
+
+  <com.mycity4kids.widget.MomspressoButtonWidget
+    android:id="@+id/followTextView"
+    android:layout_width="100dp"
+    android:layout_height="wrap_content"
+    android:layout_alignParentEnd="true"
+    android:layout_centerVertical="true"
+    android:layout_marginEnd="20dp"
+    android:background="@drawable/follow_topic_author_bg"
+    android:gravity="center"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="10dp"
+    android:text="@string/blogger_profile.follow_button"
+    android:textColor="@color/app_red"
+    android:textSize="14sp"
+    android:visibility="gone"
+    app:fb_defaultColor="@color/app_red"
+    app:fb_radius="@dimen/space_4"
+    app:fb_textFont="Roboto-Regular.ttf" />
+
+  <com.mycity4kids.widget.CustomFontTextView
+    android:id="@+id/followingTextView"
+    android:layout_width="100dp"
+    android:layout_height="wrap_content"
+    android:layout_alignParentEnd="true"
+    android:layout_centerVertical="true"
+    android:layout_marginEnd="20dp"
+    android:background="@drawable/follow_topic_author_bg"
+    android:foregroundGravity="center"
+    android:gravity="center"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="10dp"
+    android:text="@string/blogger_profile.unfollow_button"
+    android:textColor="@color/app_red"
+    android:textSize="14sp"
+    app:fontName="Roboto-Regular.ttf" />
+
+  <RelativeLayout
+    android:id="@+id/relativeLoadingView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignEnd="@+id/followTextView"
+    android:layout_centerVertical="true"
+    android:layout_toEndOf="@+id/authorNameTextView"
+    android:visibility="gone">
+
+    <ImageView
+      android:id="@+id/imgLoader"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:src="@drawable/progress_spinner" />
+  </RelativeLayout>
 
 </RelativeLayout>
