--- a/app/src/main/res/layout/reward_campaign.xml
+++ b/app/src/main/res/layout/reward_campaign.xml
@@ -286,6 +286,13 @@
     android:layout_height="match_parent"
     android:visibility="gone" />
 
+  <include
+    android:id="@+id/tour"
+    layout="@layout/tour_campaign_popup"
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+    android:visibility="gone" />
+
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbarCoachMark"
     android:layout_width="match_parent"
