--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -595,4 +595,7 @@
   <color name="color_9D9D9D">#9D9D9D</color>
   <color name="color_FFF7F8">#FFF7F8</color>
   <color name="color_FA6371">#FA6371</color>
+  <color name="color_D44058">#D44058</color>
+  <color name="color_FEF4F4">#FEF4F4</color>
+  <color name="color_F2B3B3">#F2B3B3</color>
 </resources>
